--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,19 +1,24 @@
 .footer {
     width: 100vw;
-    background-color: #e7f6f9;
+    /* background-color: #e7f6f9; */
     padding-left: 20px;
     padding-top: 10px;
 
     >.footer-container {
-        width: 45%;
-        margin: 0 auto;
+        border: 2px solid white;
+        width: 75%;
+        margin: 20px auto;
+        padding: 10px 0;
         border-radius: 18px;
+        background-color: #49484874;
+        backdrop-filter: blur(7px);
 
         >div {
             display: flex;
             width: 100%;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
+            
 
             >span {
                 >button {
@@ -29,6 +34,20 @@
                     cursor: pointer;
                 }
             }
+            >div{
+                width: 30%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                
+
+                >p{
+                    font-size: 13px;
+                line-height: 20px;
+                color: white;
+                }
+                
+            }
 
             >p {
                 font-size: 13px;
@@ -36,11 +55,12 @@
             }
 
             >p:last-of-type {
-                color: #59acb4;
+                color: green;
                 font-weight: 500;
                 font-size: 14px;
                 line-height: 36px;
                 cursor: pointer;
+                text-decoration: underline;
             }
 
         }
