--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -1,5 +1,4 @@
 .q-container {
-    background-color: #e7f6f9;
     padding-top: 10px;
 
     >form {
@@ -11,12 +10,13 @@
 
 
         >.q-card {
-            background-color: #ffffff;
+            background-color: #544f4f33;
             width: 100%;
             min-height: 3rem;
             padding: 30px;
             border-radius: 18px;
-            border: 0.5px solid #feffff;
+            border: 2px solid #feffffb7;
+            backdrop-filter: blur(7px);
         }
 
 
@@ -28,12 +28,13 @@
     flex-direction: column;
     justify-content: flex-start;
     border: 1px solid rgb(32, 33, 36);
-    ;
+    box-shadow: 5px 5px 5px 0px rgba(106, 105, 105, 0.528);
 
     >div>label {
-        font-weight: 400;
-        color: rgb(32, 33, 36);
-        font-size: 16px;
+        font-weight: 700;
+        /* color: rgba(28, 28, 29, 0.618); */
+        color: rgba(0, 128, 0, 0.817);
+        font-size: 20px;
         line-height: 24px;
     }
 
@@ -44,6 +45,7 @@
 
     >p {
         font-weight: 400;
+        opacity: 70%;
         color: rgb(32, 33, 36);
         font-size: 13px;
         line-height: 22px;
@@ -54,7 +56,7 @@
         border: none;
         outline: none;
         border-bottom: 1px solid rgb(32, 33, 36);
-        ;
+        background-color: transparent;
         line-height: 20px;
         font-size: 14px;
         margin-top: 10px;
@@ -68,6 +70,7 @@
     margin-top: 10px;
 
     >.choice-label {
+        color: rgba(0, 0, 0, 0.586);
         margin-left: 20px;
         font-size: 14px;
         line-height: 22px;
