--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,68 +1,17 @@
-.header-container {
-    width: 45%;
-    margin: 0 auto;
-    padding-left: 20px;
+.header{
+    width: 100%;
 
-    >img {
-        width: 100%;
-        border-radius: 18px;
+    >div{
+        border: 2px solid rgba(255, 255, 255, 0.504);
+        text-align: center;
+        width: 75%;
+        margin: 20px auto;
+        border-radius: 20px;
+        background-color: #49484874;
+        backdrop-filter: blur(5px);
+        color: green;
+        box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.231);
 
     }
-
-    >.header-card {
-        background-color: #ffffff;
-        padding: 20px;
-        margin-top: 10px;
-        border-radius: 18px;
-        border-top: 10px solid #84d3e0;
-
-        >h1 {
-            font-weight: 400;
-            font-size: 32px;
-            line-height: 40px;
-            color: rgb(32, 33, 36);
-        }
-        >div{
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            align-items: center;
-            >p{
-                font-weight: 700;
-                font-size: 14px;
-                line-height: 20px;
-                color: 
-                rgb(95, 99, 104);
-                >em{
-                    color: 
-                    rgb(26, 115, 232);
-                    font-weight: 400;
-                    font-style: none;
-                }
-            }
-        }
-
-        >p{
-            font-weight: 400;
-            font-size: 13px;
-            line-height: 20px;
-            color: 
-            rgb(95, 99, 104);
-        }
-        >span{
-            color: 
-            rgb(217, 48, 37);
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 20px;
-        }
-    }
-
-}
-
-.header {
-    width: 100vw;
-    background-color: #e7f6f9;
-    padding-left: 20px;
-
+   
 }
